# simple_mesh_mfem

./: .clang-format  CMakeLists.txt  README.md
examples/: .gitignore  bwr.inp  checkerboard.inp  conduction_linear.inp  conduction_var_cond.inp  generate.mesh  lwr2d.inp  lwr_pool.inp  mesh.inp  oned.inp  pseudo_oned.inp  square.inp  twigl.inp  wagner_poison_pin.inp
include/: geometry.hpp  write_mesh.hpp
src/: .gitignore  Makefile  calc_mesh.cpp  calc_mesh.hpp  geometry.cpp  geometry.hpp  input_proc.cpp  input_proc.hpp  main.cpp  mesh.cpp  write_mesh.cpp  write_mesh.hpp
